Update gitignore to ignore output; add config and output files set up for snow validation

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # this ignores all the "restart" files that are generated at run-time
 demo-data/*/output/*.nc
 input-staging-area/*
+output/
 
 parameters-*/
 
